--- a/style.css
+++ b/style.css
@@ -41,14 +41,13 @@ main {
 }
 .right-side {
   flex-basis: 250px;
-  display: flex;
+  display: inline;
   padding: 50px;
 }
 
 #game-log {
   border: 2px solid black;
   width: 300px;
-  min-height: 100px;
   padding: 20px;
   border-radius: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -106,4 +105,64 @@ main {
   justify-content: center;
   align-items: center;
   gap: 10px;
+}
+
+#modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 25%;
+  padding: 20px;
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 3rem 5rem rgb(0, 0, 0, 0.4);
+  z-index: 10;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.hidden {
+  display: none;
+}
+
+#modal .header {
+  display: flex;
+  justify-content: center;
+}
+
+h1.result {
+  flex-grow: 1;
+}
+#modal .close-modal {
+  align-self: flex-start;
+  width: 50px;
+  height: 40px;
+  font-size: x-large;
+  font-weight: 900;
+}
+#overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(118, 122, 114, 0.2);
+}
+
+.play-again {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  padding: 15px;
+  width: 150px;
+  border-radius: 10px;
+  font-size: large;
+  font-weight: 700;
+}
+
+@media (max-width: 550px) {
+  #modal {
+    width: 80%;
+  }
+
+  #overlay {
+    height: 100vh;
+  }
 }
