--- a/style.css
+++ b/style.css
@@ -33,16 +33,7 @@ main {
   flex-grow: 1;
   background-color: gainsboro;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-.left-side {
-  flex-grow: 1;
-}
-.right-side {
-  flex-basis: 250px;
-  display: inline;
-  padding: 50px;
+  flex-direction: column;
 }
 
 #game-log {
@@ -65,6 +56,12 @@ main {
   margin-bottom: 40px;
 }
 
+#buttons {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .buttons {
   border-radius: 5px;
   font-weight: 900;
@@ -76,9 +73,10 @@ main {
 .scores-container {
   display: flex;
   font-family: Arial, Helvetica, sans-serif;
-  justify-content: space-evenly;
   font-size: 40px;
   margin-bottom: 50px;
+  justify-content: center;
+  gap: 30px;
 }
 
 .scores-container {
@@ -100,7 +98,8 @@ main {
   margin-bottom: 0;
 }
 
-#allButtons {
+#weaponButtons,
+#menuButtons {
   display: flex;
   justify-content: center;
   align-items: center;
