--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
+html {
+  height: 100%;
+}
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   display: flex;
   flex-direction: column;
-  height: 100vh;
   box-sizing: border-box;
 }
 
@@ -30,6 +33,7 @@ footer {
 }
 
 main {
+  height: 100%;
   flex-grow: 1;
   background-color: gainsboro;
   display: flex;
@@ -168,12 +172,33 @@ h1.result {
   font-weight: 700;
 }
 
+#winner {
+  margin-bottom: 0;
+  font-size: 50px;
+}
+
 @media (max-width: 550px) {
   #modal {
     width: 80%;
   }
 
-  #overlay {
-    height: 100vh;
+  h1#winner {
+    font-size: xx-large;
+    font-weight: 900;
+  }
+
+  header h1 {
+    font-size: large;
+    font-weight: 900;
+  }
+
+  .buttons {
+    width: 150px;
+    height: 50px;
+    font-size: large;
+  }
+
+  .score-title {
+    font-size: xx-large;
   }
 }
