--- a/style.css
+++ b/style.css
@@ -46,13 +46,12 @@ main {
 #game-log {
   background-color: white;
   position: absolute;
-  margin-top: auto;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   overflow-y: scroll;
   border: 2px solid black;
-  width: 350px;
+  width: 50%;
   height: 250px;
   padding: 20px;
   border-radius: 20px;
@@ -122,7 +121,7 @@ main {
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 25%;
+  width: 50%;
   padding: 20px;
   background-color: white;
   border-radius: 10px;
@@ -179,7 +178,8 @@ h1.result {
 }
 
 @media (max-width: 550px) {
-  #modal {
+  #modal,
+  #game-log {
     width: 80%;
   }
 
@@ -191,11 +191,6 @@ h1.result {
   header h1 {
     font-size: large;
     font-weight: 900;
-    padding: 20px;
-  }
-
-  .scores-container {
-    padding: 20px;
   }
 
   .buttons {
@@ -205,16 +200,16 @@ h1.result {
     flex-grow: 1;
   }
 
+  .scores-container {
+    padding: 10px;
+  }
+
   .score-title {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 900;
   }
 
   #weaponButtons {
     justify-content: start;
-  }
-
-  #game-log {
-    margin: 10px;
   }
 }
