--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ main {
   padding: 20px;
   border-radius: 20px;
   font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  box-shadow: 0 3rem 5rem rgb(0, 0, 0, 0.4);
 }
 
 #scoreboard {
@@ -126,7 +127,6 @@ main {
   background-color: white;
   border-radius: 10px;
   box-shadow: 0 3rem 5rem rgb(0, 0, 0, 0.4);
-  z-index: 10;
   text-align: center;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -186,7 +186,6 @@ h1.result {
   h1#winner {
     font-size: xx-large;
     font-weight: 900;
-    color: red;
   }
 
   header h1 {
